@@ -3,6 +3,8 @@
                               Kiji Schema Shell Release Notes
 
 Version 1.0.0-rc4
+  * DDLSHELL-11. Add Client API object to enable programmatic access.
+      See org.kiji.schema.shell.api.Client.
   * SCHEMA-10. The --kiji flag now specifies a Kiji instance as a URI.
   * Updated to match KijiSchema 1.0.0-rc4 API
     SCHEMA-109, SCHEMA-143, SCHEMA-155, SCHEMA-168
